tests/fixtures/invalid/float_bitxor_int.py
# Cannot bitwise XOR Float and Int
x: float = 1.0 ^ 1
